style: adjust hamburger navbar breakpoint to 990px to prevent overlap with title

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -140,7 +140,7 @@
 
 /*!-- Navbar --*/
 
- @media (max-width: 900px) {
+ @media (max-width: 990px) {
   .navbar{
     padding-left: 1rem;
   }
